removing spouse as db relationship, adding at a domain level
